--- a/content/css/demo.css
+++ b/content/css/demo.css
@@ -15,11 +15,6 @@ body {
    /*padding-top: 40px;*/
 }
 
-/* Code in headings */
-/*h3 code {*/
-   /*font-size: 14px;*/
-   /*font-weight: normal;*/
-/*}*/
 
 
 
@@ -30,23 +25,6 @@ body > .navbar {
    font-size: 13px;
 }
 
-/* Change the docs' brand */
-/*body > .navbar .brand {*/
-   /*padding-right: 0;*/
-   /*padding-left: 0;*/
-   /*margin-left: 20px;*/
-   /*float: right;*/
-   /*font-weight: bold;*/
-   /*color: #000;*/
-   /*text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125);*/
-   /*-webkit-transition: all .2s linear;*/
-   /*-moz-transition: all .2s linear;*/
-   /*transition: all .2s linear;*/
-/*}*/
-/*body > .navbar .brand:hover {*/
-   /*text-decoration: none;*/
-   /*text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.4);*/
-/*}*/
 
 
 /* Sections
@@ -650,6 +628,25 @@ h2 + .row {
 .bs-docs-example .pagination {
    margin-top: 0;
 }
+
+.bs-docs-example-commands {
+   margin-bottom: 5px;
+}
+.bs-docs-example-commands .win-command{
+   display: inline-block;
+   vertical-align: top;
+}
+
+.bs-docs-example .win-command.orange,
+.bs-docs-example .win-command.orange .win-label {
+   color: #F09609;
+}
+.bs-docs-example .win-command.orange .win-commandring{
+   border-color: #F09609;
+}
+
+
+
 .bs-navbar-top-example,
 .bs-navbar-bottom-example {
    z-index: 1;
