--- a/less/bootmetro/bootmetro-ui-light.less
+++ b/less/bootmetro/bootmetro-ui-light.less
@@ -207,7 +207,7 @@ a:active .win-commandring,
 .win-commandring,
 button:active .win-commandring {
    background-color: transparent;
-   border-color: #000;
+   border-color: @black;
 }
 
 
