--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -79,6 +79,7 @@ Command buttons.
 */
 a.win-command {
    display: inline-block;
+   vertical-align: top;
    cursor: pointer;
    letter-spacing: 0.02em;
    vertical-align: middle;
@@ -112,8 +113,11 @@ Command button icons.
    width: 40px;
    height: 40px;
    box-sizing: border-box;
+   font-size: 30px;
+   line-height: 40px;
    cursor: default;
 }
+
 .win-commandimage {
    font-family: "IcoMoon";
    letter-spacing: 0;
