--- a/less/bootmetro/bootmetro-icons.less
+++ b/less/bootmetro/bootmetro-icons.less
@@ -37,12 +37,12 @@
 [class^="icon-"],
 [class*=" icon-"] {
    font-family: 'IcoMoon';
-   font-size: 16px;
+//   font-size: 16px;
    font-style: normal;
    font-weight: normal;
-   height: 16px;
-   line-height: 16px;
-   width: 16px;
+//   height: 16px;
+//   line-height: 16px;
+//   width: 16px;
    speak: none;
    background-image: none;
    background-position: inherit;
