--- a/templates/pages/metro-components.mustache
+++ b/templates/pages/metro-components.mustache
@@ -51,10 +51,9 @@
 
             <h2>{{_i}}Examples and markup{{/i}}</h2>
 
-            <h3>{{_i}}Simple Command{{/i}}</h3>
-            <p>{{_i}}Hover each command{{/i}}</p>
+            <h3>{{_i}}Basic Commands{{/i}}</h3>
+            <p>{{_i}}Hover each command to display an explanatory tooltip.{{/i}}</p>
             <div class="bs-docs-example bs-docs-example-commands">
-
                <button class="win-command" rel="tootlip" title="Simple command with only an icon">
                   <span class="win-commandicon icon-settings"></span>
                </button>
@@ -72,14 +71,8 @@
                   <span class="win-commandicon win-commandring icon-settings"></span>
                   <span class="win-label">With ring &amp; label</span>
                </button>
-
-               <button class="win-command orange" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
-                  <span class="win-commandicon win-commandring icon-settings"></span>
-                  <span class="win-label">Customized</span>
-               </button>
-
             </div>
-         <pre class="prettyprint linenums">
+<pre class="prettyprint linenums">
 &lt;button class="win-command" rel="tootlip" title="Simple command with only an icon"&gt;
    &lt;span class="win-commandicon icon-settings"&gt;&lt;/span&gt;
 &lt;/button&gt;
@@ -97,12 +90,67 @@
    &lt;span class="win-commandicon win-commandring icon-settings"&gt;&lt;/span&gt;
    &lt;span class="win-label"&gt;With ring &amp; label&lt;/span&gt;
 &lt;/button&gt;
+</pre>
 
+            <h3>{{_i}}Basic Commands with dark theme{{/i}}</h3>
+            <p>{{_i}}Hover each command to display an explanatory tooltip.{{/i}}</p>
+            <div class="bs-docs-example bs-docs-example-commands">
+               <div class="win-ui-dark">
+                  <button class="win-command" rel="tootlip" title="Simple command with only an icon">
+                     <span class="win-commandicon icon-settings"></span>
+                  </button>
+
+                  <button class="win-command" rel="tootlip" title="Command with icon and label">
+                     <span class="win-commandicon icon-settings"></span>
+                     <span class="win-label">With label</span>
+                  </button>
+
+                  <button class="win-command" rel="tootlip" title="Command with icon with border ring">
+                     <span class="win-commandicon win-commandring icon-settings"></span>
+                  </button>
+
+                  <button class="win-command" rel="tootlip" title="Command with icon and label with border ring">
+                     <span class="win-commandicon win-commandring icon-settings"></span>
+                     <span class="win-label">With ring &amp; label</span>
+                  </button>
+               </div>
+
+            </div>
+
+
+
+
+            <h2>{{_i}}Customization{{/i}}</h2>
+            <div class="bs-docs-example bs-docs-example-commands">
+               <button class="win-command orange" rel="tootlip" title="Command with icon and label with border ring, with a custom color">
+                  <span class="win-commandicon win-commandring icon-settings"></span>
+                  <span class="win-label">Custom color</span>
+               </button>
+            </div>
+<pre class="prettyprint linenums">
 &lt;button class="win-command orange" rel="tootlip" title="Command with icon and label with border ring, with a custom color"&gt;
    &lt;span class="win-commandicon win-commandring icon-settings"&gt;&lt;/span&gt;
    &lt;span class="win-label"&gt;Customized&lt;/span&gt;
 &lt;/button&gt;
-         </pre>
+</pre>
+
+            <p>This is a sample CSS used to customized the above orange command:</p>
+<pre class="prettyprint linenums">
+.win-command.orange .win-commandicon,
+.win-command.orange .win-label {
+   color: #F09609;
+}
+.win-command.orange .win-commandring {
+   border-color: #F09609;
+}
+.win-command.orange:hover .win-commandring {
+    background-color: rgba(240, 150, 9, 0.4);
+}
+</pre>
+
+
+
+win-ui-dark
 
 
          </section>
