--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -119,17 +119,17 @@ Command button icons.
 }
 
 .win-commandimage {
-   font-family: "IcoMoon";
+//   font-family: "IcoMoon";
    letter-spacing: 0;
    vertical-align: middle;
-   font-size: 14pt;
-   margin: -2px;
-   line-height: 40px; /* line-height must match the content box height */
-   background-position: 0 0;
+//   font-size: 14pt;
+//   margin: -2px;
+//   line-height: 40px; /* line-height must match the content box height */
+//   background-position: 0 0;
    display: inline-block;
    width: 40px;
    height: 40px;
-   background-size: 160px 80px;
+//   background-size: 160px 80px;
 }
 
 
