--- a/templates/pages/metro-components.mustache
+++ b/templates/pages/metro-components.mustache
@@ -46,12 +46,12 @@
          ================================================== -->
          <section id="commands">
             <div class="page-header">
-               <h1>{{_i}}Command Button{{/i}} <small>{{_i}}Special action buttons{{/i}}</small></h1>
+               <h1>{{_i}}Command Buttons{{/i}} <small>{{_i}}Special action buttons{{/i}}</small></h1>
             </div>
 
             <h2>{{_i}}Examples and markup{{/i}}</h2>
 
-            <h3>{{_i}}Basic Commands{{/i}}</h3>
+            <h3>{{_i}}Commands with icons{{/i}}</h3>
             <p>{{_i}}Hover each command to display an explanatory tooltip.{{/i}}</p>
             <div class="bs-docs-example bs-docs-example-commands">
                <button class="win-command" rel="tootlip" title="Simple command with only an icon">
@@ -114,10 +114,37 @@
                      <span class="win-label">With ring &amp; label</span>
                   </button>
                </div>
-
             </div>
 
 
+            <h3>{{_i}}Commands with images{{/i}}</h3>
+            <div class="bs-docs-example bs-docs-example-commands">
+               <button class="win-command" rel="tootlip" title="Simple command with only an icon">
+                  <span class="win-commandimage">
+                     <img src="holder.js/40x40" alt=""/>
+                  </span>
+               </button>
+
+               <button class="win-command" rel="tootlip" title="Command with icon and label">
+                  <span class="win-commandimage">
+                     <img src="holder.js/40x40" alt=""/>
+                  </span>
+                  <span class="win-label">With label</span>
+               </button>
+
+               <button class="win-command" rel="tootlip" title="Command with icon with border ring">
+                  <span class="win-commandimage win-commandring">
+                     <img src="holder.js/40x40" alt=""/>
+                  </span>
+               </button>
+
+               <button class="win-command" rel="tootlip" title="Command with icon and label with border ring">
+                  <span class="win-commandimage win-commandring">
+                     <img src="holder.js/40x40" alt=""/>
+                  </span>
+                  <span class="win-label">With ring &amp; label</span>
+               </button>
+            </div>
 
 
             <h2>{{_i}}Customization{{/i}}</h2>
