--- a/templates/pages/table.mustache
+++ b/templates/pages/table.mustache
@@ -170,30 +170,30 @@
       <div class="row">
          <div class="span6 align-left">
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#x0067;</span>
+               <span class="win-commandicon win-commandring icon-search-2"></span>
                <span class="win-label">Cerca</span>
             </button>
 
             <hr class="win-command" />
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xe125;</span>
+               <span class="win-commandicon win-commandring icon-reload"></span>
                <span class="win-label">Reload</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE165;</span>
+               <span class="win-commandicon win-commandring icon-email"></span>
                <span class="win-label">Send Email</span>
             </button>
          </div>
          <div class="span6 align-right">
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xE001;</span>
+               <span class="win-commandicon win-commandring icon-remove"></span>
                <span class="win-label">Delete</span>
             </button>
 
             <button class="win-command">
-               <span class="win-commandimage win-commandring">&#xe03e;</span>
+               <span class="win-commandicon win-commandring icon-plus-2"></span>
                <span class="win-label">Add</span>
             </button>
          </div>
