--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -1,10 +1,9 @@
 <div id="top-info" class="pull-right">
-   <a id="settings" class="pull-right" href="#">
-      <b class="icon-settings"></b>
+   <a id="settings" href="#" class="win-command pull-right">
+      <span class="win-commandicon win-commandring icon-settings"></span>
    </a>
-   <!--<hr class="separator pull-right"/>-->
-   <a id="logged-user" href="#" class="pull-right">
-         <b class="icon-user-2"></b>
+   <a id="logged-user" href="#" class="win-command pull-right">
+      <span class="win-commandicon win-commandring icon-user-2"></span>
    </a>
    <div class="pull-left">
       <h3>FirstName</h3>
