--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -82,7 +82,7 @@ a.win-command {
    vertical-align: top;
    cursor: pointer;
    letter-spacing: 0.02em;
-   vertical-align: middle;
+//   vertical-align: middle;
 }
 a.win-command,
 button.win-command {
