--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -37,8 +37,10 @@
 
 .panorama {
    overflow: hidden;
-   margin: 0 40px;
    position: relative;
+   .box-sizing(border-box);
+   width: 100%;
+   margin: 0 40px;
 
    &.nohidden {
       width: auto;
