--- a/less/bootmetro/forms.less
+++ b/less/bootmetro/forms.less
@@ -12,7 +12,7 @@
 }
 
 
-a.win-command,
+//a.win-command,
 input, button, select, textarea {
    font-family: @sansFontFamily;
    font-weight: 300;
