removed buttons min-width

--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -7,7 +7,7 @@ Button control.
 */
 //a.win-command,
 button, input[type=button], input[type=reset], input[type=submit] {
-   min-width: 90px;
+//   min-width: 90px;
    padding: 4px 8px;
    margin-bottom: 0;
    border: 2px solid;
