--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -6862,6 +6862,7 @@ AppBar control.
 
 .alert {
   position: relative;
+  z-index: 1060;
   text-shadow: none;
 }
 
@@ -6876,6 +6877,7 @@ AppBar control.
 
 .toast {
   position: relative;
+  z-index: 1060;
   width: 380px;
   height: 90px;
   padding: 13px 60px 13px 15px;
