--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -56,8 +56,9 @@ Back button.
 .win-backbutton::before {
    font-weight: normal;
    font-family: 'IcoMoon';
-   content: "\e05d";
+   content: "\e12e";
    vertical-align: 24%;
+   font-size: 24px;
 }
 .win-backbutton:disabled,
 .win-backbutton:disabled:active {
