--- a/less/bootmetro/dropdowns.less
+++ b/less/bootmetro/dropdowns.less
@@ -11,7 +11,7 @@ Dropdown submenu
    }
 }
 .caret:after {
-   content: "\e0f3";
+   content: "\e3e0";
 }
 .navbar .nav li.dropdown .dropdown-toggle .caret,.navbar .nav li.dropdown.open .caret {
    border: 0;
@@ -59,11 +59,11 @@ Dropdown submenu
 }
 a.header-dropdown {
    .caret {
-      font-size: 26px;
+      font-size: 24px;
       font-weight: 200;
       line-height: 30px;
       width: auto;
-      height: 26px;
+      height: 24px;
       vertical-align: middle;
    }
 }
@@ -81,7 +81,7 @@ a.header-dropdown {
    margin-top: 0;
    color: #CCC;
    font-family: 'IcoMoon';
-   content: '\e0f1'
+   content: '\e3e0'
 }
 .dropup .caret, .navbar-fixed-bottom .dropdown .caret {
    content: "";
