--- a/less/bootmetro/alerts.less
+++ b/less/bootmetro/alerts.less
@@ -159,8 +159,8 @@
 .toast .close:after,
 .modal .close:after,
 .alert .close:after {
-   content: "\e131";
-   font-size: 16px;
+   content: "\e0fd";
+   font-size: 14px;
 }
 
 .toast {
