--- a/templates/pages/hub.mustache
+++ b/templates/pages/hub.mustache
@@ -140,8 +140,8 @@
 
          </div>
          </div>
-         <a id="panorama-scroll-prev" href="#">&#xe05d;</a>
-         <a id="panorama-scroll-next" href="#">&#xe059;</a>
+         <a id="panorama-scroll-prev" href="#">&#xe12e;</a>
+         <a id="panorama-scroll-next" href="#">&#xe12a;</a>
       </div>
    </div>
 </div>
