--- a/less/bootmetro/metro-radio-checkboxes.less
+++ b/less/bootmetro/metro-radio-checkboxes.less
@@ -94,7 +94,7 @@ label.checkbox input[type=checkbox]:checked ~ span.metro-checkbox::after {
    border: 2px solid #BABABA;
    background-color: #FFF;
    font-family: 'IcoMoon';
-   content: "\e20c";
+   content: "\e383";
    color: #202020;
    font-size: 16px;
    position: absolute;
