--- a/less/bootmetro/alerts.less
+++ b/less/bootmetro/alerts.less
@@ -159,7 +159,7 @@
 .toast .close:after,
 .modal .close:after,
 .alert .close:after {
-   content: "\e0fd";
+   content: "\e078";
    font-size: 14px;
 }
 
