--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -56,7 +56,7 @@ Back button.
 .win-backbutton::before {
    font-weight: normal;
    font-family: 'IcoMoon';
-   content: "\e12e";
+   content: "\e43a";
    vertical-align: 24%;
    font-size: 24px;
 }
