--- a/less/bootmetro/dropdowns.less
+++ b/less/bootmetro/dropdowns.less
@@ -11,7 +11,7 @@ Dropdown submenu
    }
 }
 .caret:after {
-   content: "\e3e0";
+   content: "\e0d6";
 }
 .navbar .nav li.dropdown .dropdown-toggle .caret,.navbar .nav li.dropdown.open .caret {
    border: 0;
@@ -81,7 +81,7 @@ a.header-dropdown {
    margin-top: 0;
    color: #CCC;
    font-family: 'IcoMoon';
-   content: '\e3e0'
+   content: '\e0f1'
 }
 .dropup .caret, .navbar-fixed-bottom .dropdown .caret {
    content: "";
